fix: Replace Map.of with Collections.singletonMap for older Android compatibility